# slow5_pod5_converter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  converter  valgrind-out.txt
docs/: DESIGN.md  POD5READER.md  SLOW5WRITER.md  SPECIFICATION.md
read_dir/: template_pod5_reader.c
src/: main  main.c  p2s_converter.c  p2s_converter.h  pod5_reader.c  pod5_reader.h  slow5_writer.c  slow5_writer.h
test/: test.sh
